test/resources/parser/failing/testOperandVal5.scala
object ValAsStringOperand {
  "hello" ++ val s: String = "world"; s
}